@@ -1,5 +1,13 @@
 2008-07-16  Sam Steingold  <sds@gnu.org>
 
+	* control.d (SYMBOL-VALUE): tighten identification of STORE-VALUE
+	selection in CHECK-VALUE: value2 is T, not just non-NIL
+	* eval.d (eval1): ditto
+	* error.d, lispbibl.d (check_variable_value_replacement):
+	ditto (comment)
+
+2008-07-16  Sam Steingold  <sds@gnu.org>
+
 	* error.d (check_variable_value_replacement): do not pushSTACK
 	PLACE unless check_value is to be called
 
